Fix PostHog config route

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <script>
         window.__POSTHOG__ = window.__POSTHOG__ || {};
     </script>
-    <script src="posthog-config.js"></script>
+    <script src="/posthog-config"></script>
     <script>
         (function(window, document) {
             const config = window.__POSTHOG__ || {};
