Handle 'Grand Prix' as Race and show timezone in footer note

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <span class="theme-toggle-icon">🌙</span>
                 <span class="theme-toggle-label">Dark</span>
             </button>
-            <span class="timezone-note">All session times are shown in your local timezone.</span>
+            <span class="timezone-note" id="tzNote">All session times are shown in your local timezone.</span>
             <span class="tz-pill" id="tzInfo"></span>
             <p>&copy; 2025 F1 Recap. Built with ❤️ for F1 fans.</p>
         </div>
