Align footer note and copyright text

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             </div>
         </div>
         <div class="footer-bottom">
+            <span class="footer-text footer-left" id="tzNote">All session times are shown in your local timezone.</span>
             <button id="themeToggle" class="theme-toggle" type="button" aria-label="Toggle theme">
                 <span class="light-stack" aria-hidden="true">
                     <span class="light-dot"></span>
@@ -125,8 +126,7 @@
                 <span class="theme-toggle-icon">🌙</span>
                 <span class="theme-toggle-label">Dark</span>
             </button>
-            <span class="timezone-note" id="tzNote">All session times are shown in your local timezone.</span>
-            <p>&copy; 2025 F1 Recap. Built with ❤️ for F1 fans.</p>
+            <span class="footer-text footer-right">&copy; 2025 F1 Recap. Built with ❤️ for F1 fans.</span>
         </div>
     </footer>
 
