--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section footer-grid-card">
-                <h3>Essentials</h3>
+                <h3>About</h3>
+                <p>F1 Highlights Hub automatically tracks the latest FP1, FP2, FP3, Sprint, Qualifying, and Race YouTube highlights so you can catch up fast.</p>
                 <ul>
-                    <li>Auto-updates every 30 minutes</li>
-                    <li>Last 3 race weekends only</li>
-                    <li>FPs • Sprint • Quali • Race</li>
+                    <li>Auto-refresh every 30 minutes keeps the deck current.</li>
+                    <li>Showing the three most recent weekends with sprint-aware filtering.</li>
+                    <li>City-neutral design for quick video discovery on any device.</li>
                 </ul>
             </div>
             <div class="footer-section footer-grid-card">
