Simplify footer links and layout

--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
     </div>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section footer-grid-card">
+        <div class="footer-links">
+            <div class="footer-link-group">
                 <h3>About</h3>
-                <p>F1 Highlights Hub automatically tracks the latest FP1, FP2, FP3, Sprint, Qualifying, and Race YouTube highlights so you can catch up fast.</p>
                 <ul>
-                    <li>Auto-refresh every 30 minutes keeps the deck current.</li>
-                    <li>Showing the three most recent weekends with sprint-aware filtering.</li>
-                    <li>City-neutral design for quick video discovery on any device.</li>
+                    <li><a href="#hero">About F1 Highlights Hub</a></li>
+                    <li><a href="#upcoming">Upcoming races</a></li>
+                    <li><a href="#videoContainer">Latest sessions</a></li>
                 </ul>
             </div>
-            <div class="footer-section footer-grid-card">
+            <div class="footer-link-group">
                 <h3>Disclosure</h3>
-                <p>This site is not affiliated with Formula 1. All videos remain on YouTube’s official F1 channel; we just organize links.</p>
-                <div class="footer-chip">
-                    ⚠️ F1 videos can't be embedded due to licensing restrictions
-                </div>
+                <ul>
+                    <li><a href="#">Streams stay on YouTube</a></li>
+                    <li><a href="#">We track practice, sprint, qualifying, race clips</a></li>
+                    <li><a href="#">Licensing note</a></li>
+                </ul>
             </div>
         </div>
         <div class="footer-bottom">
