Center footer toggle and grid-align footer content

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
     <footer>
         <div class="footer-bottom">
-            <span class="footer-text footer-left" id="tzNote">All session times are shown in your local timezone.</span>
-            <button id="themeToggle" class="theme-toggle" type="button" aria-label="Toggle theme">
+            <span class="footer-text footer-left footer-cell-left" id="tzNote">All session times are shown in your local timezone.</span>
+            <button id="themeToggle" class="theme-toggle footer-cell-center" type="button" aria-label="Toggle theme">
                 <span class="light-stack" aria-hidden="true">
                     <span class="light-dot"></span>
                     <span class="light-dot"></span>
@@ -109,7 +109,7 @@
                 <span class="theme-toggle-icon">🌙</span>
                 <span class="theme-toggle-label">Dark</span>
             </button>
-            <span class="footer-text footer-right footer-links-inline">
+            <span class="footer-text footer-right footer-links-inline footer-cell-right">
                 <a href="/about" class="footer-inline-link">About</a>
                 <span aria-hidden="true">•</span>
                 <a href="/disclosure" class="footer-inline-link">Disclosure</a>
