ui: refine layout and content

--- a/public/about.html
+++ b/public/about.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | F1 Highlights Hub</title>
+  <meta name="description" content="Learn how F1 Highlights Hub tracks every Formula 1 session highlight, builds a 2026 calendar in your timezone, and keeps a complete 2025 archive.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://f1recap.pages.dev/about.html">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -16,12 +19,13 @@
     </div>
      <nav class="header-nav" aria-label="Main navigation">
        <div class="header-nav-inner">
-         <a href="index.html" class="nav-link">Home (2026)</a>
+         <a href="index.html" class="nav-link">Home</a>
          <a href="archive-2025.html" class="nav-link">Archive (2025)</a>
+         <a href="about.html" class="nav-link active">About</a>
        </div>
      </nav>
     <div class="header-inner">
-      <div class="last-updated">Always updating every 30 minutes.</div>
+      <div class="last-updated">Updates roll in as new highlights are published.</div>
     </div>
   </header>
 
@@ -31,8 +35,14 @@
         <div class="hero-meta">
           <p class="hero-kicker">About</p>
           <h2 class="hero-title">Your quick way to catch every F1 session</h2>
-          <p class="hero-date">We auto-fetch FP1, FP2, FP3, Sprint, Qualifying, and Race highlights from the official F1 YouTube channel every 30 minutes.</p>
-          <p class="hero-sessions">You get the last three weekends, sprint-aware ordering, local time display, and direct YouTube links.</p>
+          <p class="hero-date">We auto-fetch highlights from the official Formula 1 YouTube channel every 30 minutes and organize everything in your timezone.</p>
+          <ul class="feature-list">
+            <li>Full 2026 calendar with local times for practice, qualifying, sprint, and race.</li>
+            <li>Live countdown to the next session.</li>
+            <li>Downloadable .ics calendar file.</li>
+            <li>2025 season archive with every session highlight.</li>
+            <li>Sprint-aware labeling and clean ordering.</li>
+          </ul>
         </div>
       </div>
     </section>
