--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -86,6 +86,7 @@
             <div class="header-nav-inner">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="archive-2025.html" class="nav-link active">Archive (2025)</a>
+                <a href="about.html" class="nav-link">About</a>
             </div>
         </nav>
         <div class="header-inner">
