--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
             <div class="header-nav-inner">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="archive-2025.html" class="nav-link">Archive (2025)</a>
+                <a href="about.html" class="nav-link">About</a>
             </div>
         </nav>
         <div class="header-inner">
@@ -93,22 +94,8 @@
     </header>
 
     <main id="top">
-        <section id="hero" class="hero" aria-live="polite">
-            <div class="hero-card">
-                <div class="hero-meta">
-                    <p class="hero-kicker">2026 Season</p>
-                    <h2 class="hero-title">Full Formula 1 calendar, in your timezone</h2>
-                    <p class="hero-date">Every practice, qualifying, sprint, and race for 2026.</p>
-                    <p class="hero-sessions">Live countdown to the next session • Downloadable .ics • Updated automatically</p>
-                    <div class="hero-actions">
-                        <a class="watch-button" href="#calendar-2026">Jump to 2026 schedule</a>
-                        <a class="secondary-button" href="archive-2025.html">Open 2025 archive</a>
-                        <a class="secondary-button" href="data/f1-calendar_2026.ics">Download 2026 .ics</a>
-                    </div>
-                </div>
-                <div class="hero-flag">📅</div>
-            </div>
-        </section>
+        <section id="hero" class="hero" aria-live="polite"></section>
+        <section id="upcoming" class="hero" aria-live="polite" style="display: none;"></section>
 
         <div class="main-layout" id="calendar-2026">
             <div class="content-area">
