ui: improve theme contrast and toggles

--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -82,6 +82,17 @@
                 <p>Latest Formula 1 Practice, Qualifying, Sprint & Race Highlights</p>
             </a>
         </div>
+        <div class="header-actions">
+            <button class="theme-toggle header-toggle" type="button" aria-label="Toggle theme">
+                <span class="light-stack" aria-hidden="true">
+                    <span class="light-dot"></span>
+                    <span class="light-dot"></span>
+                    <span class="light-dot"></span>
+                </span>
+                <span class="theme-toggle-icon">🌙</span>
+                <span class="theme-toggle-label">Dark</span>
+            </button>
+        </div>
         <nav class="header-nav" aria-label="Main navigation">
             <div class="header-nav-inner">
                 <a href="index.html" class="nav-link">Home</a>
@@ -137,7 +148,7 @@
     <footer>
         <div class="footer-bottom">
             <span class="footer-text footer-left footer-cell-left" id="tzNote">All session times are shown in your local timezone.</span>
-            <button id="themeToggle" class="theme-toggle footer-cell-center" type="button" aria-label="Toggle theme">
+            <button class="theme-toggle footer-cell-center" type="button" aria-label="Toggle theme">
                 <span class="light-stack" aria-hidden="true">
                     <span class="light-dot"></span>
                     <span class="light-dot"></span>
