--- a/public/index.html
+++ b/public/index.html
@@ -74,12 +74,23 @@
     </script>
 </head>
 <body>
-     <header>
+    <header>
         <div class="header-inner">
             <a class="header-text" href="#" aria-label="Go to top">
                 <h1>🏎️ F1 Highlights Hub</h1>
                 <p>2026 Formula 1 Season • Practice, Qualifying, Sprint & Race Highlights</p>
             </a>
+        </div>
+        <div class="header-actions">
+            <button class="theme-toggle header-toggle" type="button" aria-label="Toggle theme">
+                <span class="light-stack" aria-hidden="true">
+                    <span class="light-dot"></span>
+                    <span class="light-dot"></span>
+                    <span class="light-dot"></span>
+                </span>
+                <span class="theme-toggle-icon">🌙</span>
+                <span class="theme-toggle-label">Dark</span>
+            </button>
         </div>
         <nav class="header-nav" aria-label="Main navigation">
             <div class="header-nav-inner">
@@ -133,7 +144,7 @@
     <footer>
         <div class="footer-bottom">
             <span class="footer-text footer-left footer-cell-left" id="tzNote">All session times are shown in your local timezone.</span>
-            <button id="themeToggle" class="theme-toggle footer-cell-center" type="button" aria-label="Toggle theme">
+            <button class="theme-toggle footer-cell-center" type="button" aria-label="Toggle theme">
                 <span class="light-stack" aria-hidden="true">
                     <span class="light-dot"></span>
                     <span class="light-dot"></span>
