--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -121,7 +121,7 @@
         <div class="drawer-backdrop"></div>
         <div class="drawer-panel" role="dialog" aria-modal="true" aria-label="Session details">
             <button class="drawer-close" type="button" aria-label="Close">✕</button>
-            <div class=\"drawer-body\" id=\"drawerContent\"></div>
+            <div class="drawer-body" id="drawerContent"></div>
         </div>
     </div>
 
